--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <style>
         body{
              padding-top: 55px;
+             -webkit-print-color-adjust: exact;
         }
-        .panel-default {
+        /* .panel-default {
             border-radius: 15px !important;
             background-color:azure !important;
             border-top: 0 !important;
 
-        }
+        } */
         .img-desc{position: absolute;
              left: 0; top: 0; 
              background-color: #fff; height: 100%;
@@ -43,9 +44,9 @@
         .panel{
             margin-top: 0px;
         }
-        .jumbotron{
+        /* .jumbotron{
             border-radius: 15px !important;
-        }
+        } */
         
     </style>
 </head>
@@ -117,7 +118,10 @@
                         </div>
                     </div>
                     <!-- <p class="text-center text-primary">董颖英</p> -->
-                    <h2 class="text-center text-primary">董颖英</h1>
+                    <h2 class="text-center text-primary">
+                        <ruby>董<rt>Dǒng</rt></ruby>
+                        <ruby>颖<rt>Yǐng</rt></ruby>
+                        <ruby>英<rt>Yīng</rt></ruby></h1>
                 <h4 class="text-center text-primary">Javascript/ Web / 前端</h4>
                     <address>
                         <strong>广东</strong><br>
@@ -227,7 +231,8 @@
                                         <span class="glyphicon glyphicon-flag" aria-hidden="true"></span> 项目
                                       </div>
                                       <div class="panel-body">
-                                        <a href="https://codepen.io/brucedong2046/pen/oRmQpR" target="_blank">一个关于恩雅的页面</a>
+                                        <a href="https://codepen.io/brucedong2046/pen/oRmQpR" target="_blank">一个关于恩雅的页面</a><br>
+                                        <a href="https://brucedong2046.github.io/study/" target="_blank">仿雷军老师书法网站</a>
                                         <!-- <br><a href="pages/resume.html">可编辑简历模板</a> -->
                                       </div>
                                   </div>
